<resources>
    <string name="app_name">FootballApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_footballclubs">Football clubs</string>
    <string name="ukrainian_clubs">Ukrainian clubs</string>
    <string name="all_clubs">All clubs</string>
    <string name="kyiv_clubs_rank">Kyiv clubs rank</string>
    <string name="kyiv_clubs_rank_text">Kyiv clubs rank:</string>
    <string name="knu_contacts">KNU contacts</string>
    <string name="menu_knu_contacts">KNU contacts</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="info_name_label">Name:</string>
    <string name="info_surname_label">Surname:</string>
    <string name="info_group_label">Group:</string>
    <string name="actual_name">Oleksandr</string>
    <string name="actual_surname">Starzhynskyi</string>
    <string name="actual_group">TTP-42</string>
    <string name="about_developer">About developer</string>
</resources>