<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_footballclubs">

    <fragment
        android:id="@+id/nav_footballclubs"
        android:name="com.example.footballapp.ui.footballclubs.FootballClubsFragment"
        android:label="@string/menu_footballclubs"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/nav_knucontacts"
        android:name="com.example.footballapp.ui.contacts.ContactsFragment"
        android:label="@string/menu_knu_contacts"
        tools:layout="@layout/fragment_contacts_list" />

    <fragment
        android:id="@+id/nav_aboutdeveloper"
        android:name="com.example.footballapp.ui.info.InfoFragment"
        android:label="@string/about_developer"
        tools:layout="@layout/fragment_contacts_list" />
</navigation>