<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45FFFFFF"

    tools:context=".ui.info.InfoFragment">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <LinearLayout
        android:id="@+id/SNL_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/photo"
        app:layout_constraintStart_toStartOf="@id/photo"
        app:layout_constraintTop_toBottomOf="@id/photo">

        <LinearLayout
            android:id="@+id/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/label_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_surname_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_name_label"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/photo"
            app:layout_constraintStart_toEndOf="@id/labels"
            app:layout_constraintTop_toTopOf="@id/labels">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_surname"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_name"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="@id/SNL_info"
        app:layout_constraintStart_toStartOf="@id/SNL_info"
        app:layout_constraintTop_toBottomOf="@id/SNL_info">

        <TextView
            android:id="@+id/group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_group_label"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actual_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/actual_group"
            android:textSize="23sp"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>