<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kyiv_clubs_rank_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kyiv_clubs_rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:visibility="gone"
            android:id="@+id/rank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kyiv_clubs_rank_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kyiv_clubs_rank_b" />

        <TextView
            android:visibility="gone"
            android:id="@+id/rank_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/rank_text"
            app:layout_constraintTop_toBottomOf="@id/kyiv_clubs_rank_b" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/all_clubs_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/all_clubs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/uk_clubs_b"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/uk_clubs_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ukrainian_clubs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/all_clubs_b"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.footballapp.ui.footballclubs.FootballClubsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.footballclubs.FootballClubsFragment"
        tools:listitem="@layout/fragment_item"/>


</LinearLayout>

